--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,6 @@ html {
     font-family: 'Open Sans';
 }
 
-
-.menu {
-    vertical-align: center;
-    text-align: center;
-    font-weight: 900;
-    margin-top: 50px;
-    left:0;
-    top:0;
-    right:0;
-    bottom:0;
-    font-size: 20px;
-    padding-bottom: 5px;
-    padding-left: 30px;
-    color: white;
-    text-align: center;
-    margin-bottom: ;
-}
-
 .select {
     color: #D8D8D8;
 }
@@ -37,6 +19,13 @@ html {
   color: white;
   text-align: center;
 }
+.marg {
+    margin-left: 33%;
+}
+
+.fixed {
+  position:fixed;
+}
 
 .white {
     color: white;
@@ -45,21 +34,20 @@ html {
 }
 
 h1 {
-	padding-bottom: 20px;
-    font-weight: 800;
-	font-size: 60px;
-    text-align: center;
+    margin-top:50px;
+       font-weight: 800;
+	font-size: 35px;
+    text-align: left;
+    margin-left: 20px;
   
 }
 
 .intro {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 300;
-    text-align: center;
-    letter-spacing: .3px;
-    border-bottom: 8px solid;
     text-align: left;
-    padding-bottom: 20px;
+    margin-top: 10px;
+    margin-left: 80px;
 }
 
 h3 {
@@ -68,9 +56,15 @@ h3 {
 }
 
 h5 {
-    font-size: 16px;
+    font-size: 30px;
     font-weight: 800;
-    text-decoration: underline;
+    margin-left: 80px;
+    border-bottom: 5px solid black;
+    border-bottom-width: 100%;
+}
+
+.smallmarg {
+    margin-left: 20px;
 }
 
 .filler {
@@ -81,7 +75,6 @@ img {
     height: auto;
     width: 100%;
     display: inline-block;
-    border: 1px black;
 }
 
 .icon {
@@ -90,15 +83,15 @@ img {
 }
 
 .header {
-    width: 100%;
+    width: 90%;
     height: auto;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 20px;
 }
 
 .float {
     float: left;
-    padding-right: 50px;
+    padding-right: 20px;
 }
 
 .circle {
@@ -117,9 +110,18 @@ img {
     vertical-align: fixed;
 }
 
-a {
+a.menu {
     text-decoration: none;
-    color: white;
+    color: black;
+    font-size: 18px;
+    font-weight: 400;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.indent {
+    font-weight: 400;
+    text-decoration: none;
 }
 
 a:hover{
@@ -167,39 +169,11 @@ h3.recent  {
     margin-top: 50px;
 }
 
-.ids {
-    color: black;
-
-}
-
-.social {
-    font-weight: 900;
-    font-size: 18px;
-    padding-left: 30px;
-    padding-top: -40px;
-}
-
-.blacklink {
-    color: black;
-}
-
 .work {
     width: 25%;
     height: auto;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 20px;
-}
-
-.about {
-    width: 50%;
-    height: auto;
-    margin-top: 100px;
-    margin-bottom: 20px;
-}
-
-.imgborder {
-    border-bottom: 5px solid black;
-    padding-bottom: 30px;
 }
 
 .workimg{
@@ -209,16 +183,17 @@ h3.recent  {
     display: inline;
     margin-left: 20px;
     margin-bottom: 20px;
+    background-color: #fff;
+    padding: 5px;
     border: 1px solid black;
+
 }
 
 .horizontal {
-    height: 200px;
-    width: auto;
-}
+    height: auto;
+    width: 400px;
+    border: 1px solid black;
 
-.light {
-    font-weight: 100;
 }
 
 .resume {
@@ -230,9 +205,10 @@ h3.recent  {
 
 img.footer {
     border: none;
-    width: 30px;
-    padding-left: 0px;
+    width: 25px;
+    height: auto;
     display: inline-block;
+    margin-top: 30px;
     }
 
 a.footer {
@@ -272,6 +248,70 @@ iframe {
     font-weight: 900;
 }
 
+.head {
+    width: 30%;
+    display: block;
+}
+
+.topfill {
+    height: 80px;
+    width: 100%
+}
+
+.digi {
+    display: block;
+    padding: 10px;
+    height: auto;
+    background-color: #fff;
+    margin-bottom: 30px;
+    width: 100%;
+    margin-right: 10px;
+    border: 1px solid black;
+
+}
+
+
+
+.topmarg {
+    margin-top: 80px;
+}
+
+.margleft {
+    margin-left: 80px;
+}
+
+.block {
+    display: block;
+}
+
+.me {
+    width: 90%;
+}
+
+blockquote {
+    width: 70%;
+    margin-left:80px;
+    margin-bottom: 50px;
+}
+
+iframe {
+    margin-left: 80px;
+    width: 76%; 
+    height: 280px;
+    margin-top: 20px;
+
+}
+
+.link {
+    text-decoration: underline;
+    color: black;
+}
+
+p {
+    margin-left: 80px;
+    margin-top: -15px;
+    font-size: 16px;
+}
 
 /* Mobile first queries */
 
